--- a/index.html
+++ b/index.html
@@ -37,10 +37,8 @@
             <p class="subtitle">A minimal, fast, and accessible Tasbih counter</p>
         </header>
         <main class="tasbih-main nextjs-main">
-            <div class="counter-card nextjs-card">
-                <button id="count-btn" class="counter-circle nextjs-circle nextjs-count-btn" aria-label="Count">
+            <div class="counter-card nextjs-card">                <button id="count-btn" class="counter-circle nextjs-circle nextjs-count-btn" aria-label="Count">
                     <span id="count">0</span>
-                    <span class="count-arrow" aria-hidden="true"></span>
                 </button>
                 <div class="counter-actions nextjs-actions">
                     <button id="reset-btn" class="secondary-btn nextjs-btn" aria-label="Reset">Reset</button>
