--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div id="info-modal" class="modal-overlay" aria-hidden="true">
         <div class="modal-content nextjs-modal">
             <div class="modal-header">
-                <h2>Bildnachweise</h2>
+                <h2>Photo credits</h2>
                 <button class="modal-close" id="modal-close" aria-label="Schließen">&times;</button>
             </div>
             <div class="modal-body">
