--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-title" content="Tasbih" />
     <link rel="manifest" href="/site.webmanifest" />
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Digital Tasbih</title>
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
