--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="theme-toggle nextjs-theme-toggle">
                 <button class="theme-btn nextjs-theme-btn" id="light-theme">☀️</button>
                 <button class="theme-btn nextjs-theme-btn" id="dark-theme">🌙</button>
-                <button class="info-btn nextjs-btn" id="info-btn" aria-label="Bildnachweise">ⓘ</button>
+                <button class="info-btn nextjs-theme-btn" id="info-btn" aria-label="Bildnachweise">ⓘ</button>
             </div>
         </footer>
     </div>
