--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="shortcut icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" href="/tasbih/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/tasbih/favicon.svg" />
+    <link rel="shortcut icon" href="/tasbih/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/tasbih/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="Tasbih" />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="manifest" href="/tasbih/site.webmanifest" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Digital Tasbih</title>
