--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Digital Tasbih</title>
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
+    <meta name="description" content="Digital Tasbih - A minimal, fast, and accessible Islamic dhikr counter. Count your remembrance of Allah ﷻ with this beautiful web app featuring dark mode and DramaZoom functionality.">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="Digital Tasbih">
