--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link rel="manifest" href="site.webmanifest" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="description" content="Digital Tasbih - A minimal, fast, and accessible Islamic dhikr counter. Count your remembrance of Allah ﷻ with this beautiful web app featuring dark mode and DramaZoom functionality.">
     <title>Digital Tasbih</title>
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
-    <meta name="description" content="Digital Tasbih - A minimal, fast, and accessible Islamic dhikr counter. Count your remembrance of Allah ﷻ with this beautiful web app featuring dark mode and DramaZoom functionality.">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="Digital Tasbih">
@@ -41,26 +41,41 @@
             <div class="counter-card nextjs-card">                
                 <button id="count-btn" class="counter-circle nextjs-circle nextjs-count-btn" aria-label="Count">
                     <span id="count">0</span>
-                </button>                
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6" style="position: absolute;bottom: 0;left: 0;width: 100%;height: 100%;fill: #dfdfdf;">
+                        <path fill-rule="evenodd" d="M11.47 10.72a.75.75 0 0 1 1.06 0l7.5 7.5a.75.75 0 1 1-1.06 1.06L12 12.31l-6.97 6.97a.75.75 0 0 1-1.06-1.06l7.5-7.5Z" clip-rule="evenodd" />
+                        <path fill-rule="evenodd" d="M11.47 4.72a.75.75 0 0 1 1.06 0l7.5 7.5a.75.75 0 1 1-1.06 1.06L12 6.31l-6.97 6.97a.75.75 0 0 1-1.06-1.06l7.5-7.5Z" clip-rule="evenodd" />
+                    </svg>
+                </button>                  
                 <div class="counter-actions nextjs-actions">
-                    <button id="reset-btn" class="secondary-btn nextjs-btn" aria-label="Reset">Reset</button>
-                    <button id="megazoom-btn" class="secondary-btn nextjs-btn" aria-label="DramaZoom">DramaZoom</button>
+                    <div class="actions-container">
+                        <button id="decrement-btn" class="secondary-btn nextjs-btn decrement-btn" aria-label="Decrease count">
+                            <span class="btn-icon">−</span>
+                            <span class="btn-text">1</span>
+                        </button>
+                        <button id="reset-btn" class="secondary-btn nextjs-btn" aria-label="Reset">Reset</button>
+                    </div>
+                    <div class="dramazoom-container">
+                        <button id="megazoom-btn" class="secondary-btn nextjs-btn" aria-label="DramaZoom">DramaZoom</button>
+                    </div>
                 </div>
             </div>
         </main>        <footer class="tasbih-footer nextjs-footer">
             <div class="theme-toggle nextjs-theme-toggle">
                 <button class="theme-btn nextjs-theme-btn" id="light-theme">
-                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="32px" height="32px" viewBox="0 0 24 24">
-                        <path d="M 11 0 L 11 3 L 13 3 L 13 0 L 11 0 z M 4.2226562 2.8085938 L 2.8085938 4.2226562 L 4.9296875 6.34375 L 6.34375 4.9296875 L 4.2226562 2.8085938 z M 19.777344 2.8085938 L 17.65625 4.9296875 L 19.070312 6.34375 L 21.191406 4.2226562 L 19.777344 2.8085938 z M 12 5 C 8.1456661 5 5 8.1456661 5 12 C 5 14.767788 6.6561188 17.102239 9 18.234375 L 9 21 C 9 22.093063 9.9069372 23 11 23 L 13 23 C 14.093063 23 15 22.093063 15 21 L 15 18.234375 C 17.343881 17.102239 19 14.767788 19 12 C 19 8.1456661 15.854334 5 12 5 z M 12 7 C 14.773666 7 17 9.2263339 17 12 C 17 14.184344 15.605334 16.022854 13.666016 16.708984 L 13 16.943359 L 13 21 L 11 21 L 11 16.943359 L 10.333984 16.708984 C 8.3946664 16.022854 7 14.184344 7 12 C 7 9.2263339 9.2263339 7 12 7 z M 0 11 L 0 13 L 3 13 L 3 11 L 0 11 z M 21 11 L 21 13 L 24 13 L 24 11 L 21 11 z M 4.9296875 17.65625 L 2.8085938 19.777344 L 4.2226562 21.191406 L 6.34375 19.070312 L 4.9296875 17.65625 z M 19.070312 17.65625 L 17.65625 19.070312 L 19.777344 21.191406 L 21.191406 19.777344 L 19.070312 17.65625 z"></path>
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6" width="32" height="32">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M12 18v-5.25m0 0a6.01 6.01 0 0 0 1.5-.189m-1.5.189a6.01 6.01 0 0 1-1.5-.189m3.75 7.478a12.06 12.06 0 0 1-4.5 0m3.75 2.383a14.406 14.406 0 0 1-3 0M14.25 18v-.192c0-.983.658-1.823 1.508-2.316a7.5 7.5 0 1 0-7.517 0c.85.493 1.509 1.333 1.509 2.316V18" />
                     </svg>
                 </button>
                 <button class="theme-btn nextjs-theme-btn" id="dark-theme">
-                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="32px" height="32px" viewBox="0 0 48 48">
-                        <path d="M16.415 31.906L16.88 34h14.24l.465-2.094c.315-1.417.988-2.752 2.041-3.751C36.395 25.53 38 21.864 38 18c0-7.718-6.283-13.975-14-13.978C16.283 4.025 10 10.282 10 18c0 3.864 1.605 7.53 4.373 10.155C15.427 29.154 16.1 30.489 16.415 31.906zM17.547 37l.946 4.259C18.849 42.861 20.27 44 21.91 44h4.18c1.64 0 3.061-1.139 3.417-2.741L30.453 37H17.547z"></path>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6" width="32" height="32">
+                        <path d="M12 .75a8.25 8.25 0 0 0-4.135 15.39c.686.398 1.115 1.008 1.134 1.623a.75.75 0 0 0 .577.706c.352.083.71.148 1.074.195.323.041.6-.218.6-.544v-4.661a6.714 6.714 0 0 1-.937-.171.75.75 0 1 1 .374-1.453 5.261 5.261 0 0 0 2.626 0 .75.75 0 1 1 .374 1.452 6.712 6.712 0 0 1-.937.172v4.66c0 .327.277.586.6.545.364-.047.722-.112 1.074-.195a.75.75 0 0 0 .577-.706c.02-.615.448-1.225 1.134-1.623A8.25 8.25 0 0 0 12 .75Z" />
+                        <path fill-rule="evenodd" d="M9.013 19.9a.75.75 0 0 1 .877-.597 11.319 11.319 0 0 0 4.22 0 .75.75 0 1 1 .28 1.473 12.819 12.819 0 0 1-4.78 0 .75.75 0 0 1-.597-.876ZM9.754 22.344a.75.75 0 0 1 .824-.668 13.682 13.682 0 0 0 2.844 0 .75.75 0 1 1 .156 1.492 15.156 15.156 0 0 1-3.156 0 .75.75 0 0 1-.668-.824Z" clip-rule="evenodd" />
                     </svg>
                 </button>
                 <button class="info-btn nextjs-theme-btn" id="info-btn" aria-label="Bildnachweise">
-                    <img src="img/information-button.png" alt="Info Icon" width="32" height="32">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6" width="32" height="32">
+                        <path fill-rule="evenodd" d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12Zm8.706-1.442c1.146-.573 2.437.463 2.126 1.706l-.709 2.836.042-.02a.75.75 0 0 1 .67 1.34l-.04.022c-1.147.573-2.438-.463-2.127-1.706l.71-2.836-.042.02a.75.75 0 1 1-.671-1.34l.041-.022ZM12 9a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Z" clip-rule="evenodd" />
+                    </svg>
                 </button>
             </div>
         </footer>
@@ -70,14 +85,12 @@
     <div id="info-modal" class="modal-overlay" aria-hidden="true">
         <div class="modal-content nextjs-modal">
             <div class="modal-header">
-                <h2>Photo credits</h2>
+                <h2>Dedication of This Page</h2>
                 <button class="modal-close" id="modal-close" aria-label="Schließen">&times;</button>
             </div>
             <div class="modal-body">
                 <!-- Add your image credits/tags here -->
-                <a href="https://www.flaticon.com/free-icons/info" title="info icon">Info icon created by Freepik - Flaticon</a>
-                <p>Icons by <a target="_blank" href="https://icons8.com">Icons8</a></p>
-                <p><a target="_blank" href="https://www.flaticon.com/free-icons/arrows" title="arrows icon">Arrows icon created by Arslan Haider - Flaticon</a></p>
+                <p>This page is dedicated to my mother, who helped me overcome my struggles. May our mothers reach the greatest mercy of Allah ﷻ and be granted the highest place in Jannah, as we all, the creations of Allah ﷻ, too.</p>
             </div>
         </div>
     </div>
