--- a/index.html
+++ b/index.html
@@ -72,8 +72,13 @@
                         <path fill-rule="evenodd" d="M9.013 19.9a.75.75 0 0 1 .877-.597 11.319 11.319 0 0 0 4.22 0 .75.75 0 1 1 .28 1.473 12.819 12.819 0 0 1-4.78 0 .75.75 0 0 1-.597-.876ZM9.754 22.344a.75.75 0 0 1 .824-.668 13.682 13.682 0 0 0 2.844 0 .75.75 0 1 1 .156 1.492 15.156 15.156 0 0 1-3.156 0 .75.75 0 0 1-.668-.824Z" clip-rule="evenodd" />
                     </svg>
                 </button>
-                <button class="info-btn nextjs-theme-btn" id="info-btn" aria-label="Bildnachweise">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6" width="32" height="32">
+                <button class="info-btn nextjs-theme-btn" id="info-btn" aria-label="Information">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="url(#MyGradient)" class="size-6" width="32" height="32">
+                        <defs>
+                            <linearGradient id="MyGradient">
+                              <stop offset="0%" stop-color="#6B6BFF" />
+                              <stop offset="95%" stop-color="#9F9FFF" />
+                        </defs>
                         <path fill-rule="evenodd" d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12Zm8.706-1.442c1.146-.573 2.437.463 2.126 1.706l-.709 2.836.042-.02a.75.75 0 0 1 .67 1.34l-.04.022c-1.147.573-2.438-.463-2.127-1.706l.71-2.836-.042.02a.75.75 0 1 1-.671-1.34l.041-.022ZM12 9a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Z" clip-rule="evenodd" />
                     </svg>
                 </button>
