--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="Digital Tasbih">
+    <meta name="theme-color"></meta>
     <script>
         // Register service worker for PWA
         if ('serviceWorker' in navigator) {
