--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="manifest" href="site.webmanifest">
     <meta name="apple-mobile-web-app-title" content="Tasbih">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <meta name="theme-color" content="#4facfe">
     <script>
