--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
                         </button>
                         <button id="reset-btn" class="secondary-btn nextjs-btn" aria-label="Reset">Reset</button>
                     </div>
-                    <div class="dramazoom-container">
+                    <div class="actions-container">
                         <button id="megazoom-btn" class="secondary-btn nextjs-btn" aria-label="DramaZoom">DramaZoom</button>
+                        <button id="flash-therapy-btn" class="secondary-btn nextjs-btn flash-therapy-btn" aria-label="Flash Therapy">Flash</button>
                     </div>
                 </div>
             </div>
