--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     </div>
                     <div class="actions-container">
                         <button id="megazoom-btn" class="secondary-btn nextjs-btn" aria-label="DramaZoom">DramaZoom</button>
-                        <button id="flash-therapy-btn" class="secondary-btn nextjs-btn flash-therapy-btn" aria-label="Flash Therapy">Flash</button>
+                        <button id="flash-therapy-btn" class="secondary-btn nextjs-btn flash-therapy-btn" aria-label="Flash Therapy">Flash-Cure</button>
                     </div>
                 </div>
             </div>
